kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contacts-backend
spec:
  selector:
    app: contacts-backend
  ports:
  - port: 80
    targetPort: 8000
  type: NodePort
