kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contacts-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: contacts-ip
    networking.gke.io/managed-certificates: contacts-certificate
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: api.ataagri.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: contacts-backend
            port:
              number: 80
